<resources>
    <string name="app_name">Guess Me</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- describe  -->
    <string name="quiz_voice"><b>voice speaker</b></string>

    <!--  nav  -->
    <string name="fragment_login"><b>Sign In</b></string>
    <string name="fragment_home"><b>Home</b></string>
    <string name="fragment_sign_up"><b>Sign Up</b></string>
    <string name="fragment_people_list"><b>Person</b></string>
    <string name="fragment_add_person"><b>Add Person</b></string>
    <string name="fragment_person_detail"><b>Person Information</b></string>
    <string name="fragment_modify_person"><b>Edit Information</b></string>
    <string name="fragment_start_quiz"><b>Quiz</b></string>
    <string name="fragment_quiz_result"><b>Result</b></string>

    <!--  login  -->
    <string name="sign_up_email">Guardian Email</string>
    <string name="login_id"><b>ID</b></string>
    <string name="login_pw"><b>Password</b></string>
    <string name="btn_login"><b>SignIn</b></string>
    <string name="btn_sign_in"><b>SignUp</b></string>
    <string name="login_or"><b>Or</b></string>
    <string name="login_error"><b>Does not exist.🥲</b></string>

    <!--  sign up   -->
    <string name="sign_up_welcome"><b>Welcome!</b></string>
    <string name="sign_up_cancel"><b>Cancel</b></string>

    <!--  home  -->
    <string name="home_person_list"><b>Person</b></string>
    <string name="home_quiz"><b>Quiz</b></string>

    <!--  list  -->
    <string name="people_list_search"><b>Search</b></string>
    <string name="people_list_floating">add person</string>

    <!--  add/modify person  -->
    <string name="person_record_start"><b>Record👂🏻</b></string>
    <string name="person_record_finish"><b>Complete👂🏻</b></string>
    <string name="person_profile_description">image_profile</string>
    <string name="person_speaker"><b>Speaker🔊</b></string>
    <string name="people_list_info"><b>Info</b></string>
    <string name="person_btn_save"><b>Save</b></string>
    <string name="person_name"><b>Name</b></string>
    <string name="person_relation"><b>Relation</b></string>
    <string name="person_birth"><b>Birth</b></string>
    <string name="person_address"><b>Address</b></string>
    <string name="person_btn_delete"><b>Cancel</b></string>
    <string name="person_edit_hint"><b>✎</b></string>
    <string name="person_birth_hint"><b>ex) 2023-01-01</b></string>

    <!--  detail   -->
    <string name="detail_quiz"><b>Quiz✏️</b></string>
    <string name="detail_modify"><b>Edit</b></string>
    <string name="detail_info_add"><b>Add Info</b></string>
    <string name="detail_info_delete"><b>Delete Info</b></string>
    <string name="detail_info_delete_complete"><b>Complete</b></string>
    <string name="detail_info_floating">modify info</string>

    <!--  dialog  -->
    <string name="dialog_ok"><b>OK</b></string>
    <string name="dialog_add_person">Please fill required information!🙂</string>
    <string name="dialog_no_text">There are no recognizable parts!🥲</string>
    <string name="dialog_msg_error">Error occurred!\n please try again.🥲</string>
    <string name="dialog_modify_msg_error">Error occurred during deletion process,\n please try again.🥲</string>
    <string name="dialog_token_request">Expired token.\n Please login again!🥲</string>
    <string name="dialog_existed_user">User already exists!🥲</string>
    <string name="dialog_sign_up_success">Sign up!\n Please sign in.😀</string>
    <string name="dialog_permission"><b>Permissions</b> are required!🥲</string>
    <string name="dialog_record_error"><b>Recording error occurred!\n Please try again!🥲</b></string>
    <string name="dialog_record_no_file"><b>The voice file does not exist.\n Please record first!🙂</b></string>
    <string name="dialog_quiz_start"><b>This is the first question!🙂</b></string>
    <string name="dialog_quiz_last"><b>This is the last question.!🙂</b></string>
    <string name="dialog_patch_score"><b>Score registration failed.🥲</b></string>
    <string name="detail_info_delete_success"><b>Deleted Successfully!🙂</b></string>
    <string name="detail_info_modify_success"><b>Corrected successfully!🙂</b></string>

    <!--  add info dialog  -->
    <string name="dialog_add_info_notice"><b>Info</b></string>
    <string name="dialog_add_info_key"><b>Info</b></string>
    <string name="dialog_add_info_value"><b>Value</b></string>
    <string name="dialog_add_info_save"><b>Save</b></string>
    <string name="dialog_add_info_cancel"><b>Cancel</b></string>
    <string name="dialog_modify_info">Edit</string>
    <string name="dialog_delete_info">Cancel</string>

    <!--  quiz  -->
    <string name="quiz_start"><b>Don\'t forget your memory!✏️</b></string>
    <string name="quiz_no_person_error"><b>No quiz targets.\n Add person first!🙂</b></string>
    <string name="quiz_btn_start"><b>Start</b></string>
    <string name="quiz_btn_cancel"><b>Stop</b></string>
    <string name="quiz_btn_before"><b>◀︎</b></string>
    <string name="quiz_btn_next"><b>▶︎</b></string>
    <string name="quiz_info"><b>Quiz！</b></string>
    <string name="quiz_btn_answer"><b>Shoot the answer</b></string>
    <string name="quiz_btn_stop"><b>Quiz over</b></string>
    <string name="quiz_result_correct"><b>Correct!⭕️</b></string>
    <string name="quiz_result_wrong"><b>Wrong!❌</b></string>
    <string name="quiz_answer_next"><b>Next</b></string>
    <string name="quiz_result_up"><b>▲</b></string>
    <string name="quiz_result_down"><b>▼</b></string>
    <string name="quiz_result_info"><b>Info</b></string>
    <string name="quiz_result_finish"><b>Finish</b></string>
    <string name="quiz_scoring">Scoring now..👀</string>
    <string name="quiz_scoring_step"><b>Step📝</b></string>
    <string name="quiz_result"><b>Result👀</b></string>

</resources>