<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/base_green_round_shape"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_add_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/dialog_add_info_notice"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/layout_add_info_key"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_add_info_key"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@drawable/base_white_round_shape"
        app:layout_constraintBottom_toTopOf="@id/layout_add_info_value"
        app:layout_constraintTop_toBottomOf="@id/txt_add_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_add_info_key"
            android:background="@null"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_add_info_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginEnd="10dp"
            android:padding="12dp"
            android:maxLines="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/person_edit_hint"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_info_value"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="@drawable/base_white_round_shape"
        app:layout_constraintBottom_toTopOf="@id/btn_add_info_save"
        app:layout_constraintTop_toBottomOf="@id/layout_add_info_key"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_add_info_value"
            android:background="@null"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_add_info_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="12dp"
            android:maxLines="1"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/person_edit_hint"
            android:background="@null"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_info_save"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/dialog_add_info_save"
        android:background="@drawable/base_yellow_round_shape"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/layout_add_info_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_add_info_cancel"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_info_cancel"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/dialog_add_info_cancel"
        android:background="@drawable/base_yellow_round_shape"
        android:gravity="center"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/btn_add_info_save"
        app:layout_constraintLeft_toRightOf="@id/btn_add_info_save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_info_save"/>


</androidx.constraintlayout.widget.ConstraintLayout>